--- a/demo/index.html
+++ b/demo/index.html
@@ -56,6 +56,7 @@
             var selectbox = $("#selectbox").dxSelectBox({
                 items: [true, false],
                 text: 'strictParsing',
+                value: true,
                 onValueChanged: function(e) {
                     dataGrid.option("searchPanel.strictParsing",e.value);
                 }
